--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,14 +25,15 @@ jobs:
           
   test:
     runs-on: ubuntu-latest
+    needs: build
     strategy:
       matrix:
         os: [ubuntu-latest, windows-2016]
         node-version: [12.x, 14.x]
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/download-artifact@main
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
     - name: npm install, and test
